ForceNUMA and only one available NUMA node fails assertion on Windows

XMLWordPrintable

    • gc
    • b22
    • windows
    • Verified

      $ ./jdk-15/fastdebug/bin/java -XX:+UseG1GC -XX:+UseNUMA -XX:+ForceNUMA -version
      # To suppress the following error report, specify this argument
      # after -XX: or in .hotspotrc: SuppressErrorAt=t:/workspace/open/src/hotspot/os/windows/os_windows.cpp:2912
      #
      # A fatal error has been detected by the Java Runtime Environment:
      #
      # Internal Error (t:/workspace/open/src/hotspot/os/windows/os_windows.cpp:2912), pid=9256, tid=18272
      # assert(numa_node_list_holder.get_count() > 0) failed: Multiple NUMA nodes expected

      The specific choice of GC probably doesn't matter for this.

            Assignee:
            Kim Barrett
            Reporter:
            Kim Barrett
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: