8243961: ForceNUMA and only one available NUMA node fails assertion on Windows

Improve ergnomics for UseNUMA and UseNUMAInterleaving

Reviewed-by: tschatzl, sjohanss